Started Working on the controller for NATS

--- a/database.csproj
+++ b/database.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.8" />
+    <PackageReference Include="NATS.Client" Version="1.1.4" />
     <PackageReference Include="NUnit" Version="4.0.1" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
